# atomlab-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  run.py  settings.ini
alembic/: env.py
alembic/versions/: 123ff54f1956_delete_fk_to_project_from_chats_table.py  300cabfe1bb4_добавлен_столбец_в_chat_для_связи_с_.py  3e620f91cd63_create_users_table.py  407a101db562_добавить_поле_удален_deleted_at_в_.py  7068e0fff230_добавлена_новая_таблица_с_проектами_и_.py  72d80104dc5a_исправлена_ошибка_с_полем_prj_owner_в_.py  94f98ddcbfdc_create_chats_and_users_table.py  aa8df9bf245a_create_chats_table.py
app/: adminpanel.py  handlers.py  keyboards.py  middlewares.py  statesuser.py  user_requests.py
app/database/: __init__.py  crud_manager.py  db_helper.py  models.py  request.py
app/handlers/: __init__.py  admin.py
app/messages/: msg_texts.py
config/: .env.template  __init__.py  config.py  parser_settings.py
