[project]
name = "atomlab-bot"
version = "0.1.0"
description = "telegram bot for atomlab project"
authors = [
    {name = "mks_min",email = "mininname@vk.com"}
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

