[project]
name = "atomlab-bot"
version = "0.1.0"
description = "telegram bot for atomlab project"
authors = [
    {name = "mks_min",email = "mininname@vk.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"


[tool.poetry.dependencies]
alembic = "^1.15.2"
asyncpg = "^0.30.0"
aiogram = "^3.20.0.post0"
sqlalchemy = "^2.0.40"
pandas = "^2.2.3"
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
qrcode = "^8.2"
pillow = "^11.2.1"
